	* Resolves #70225: Add composer.json to extension and language pack template
	* Resolves #70228: Delete old language files
	* Resolves #70231: Delete translation files from extension
	* Resolves #70235: Move static template registration to TCA/Overrides
	* Resolves #70239: Adapt to new TCA configuration and backend Form Engine API of TYPO3 CMS 7

2015-09-14  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #67998: Increase maxitems for cn_country_zones in TCA
	* Resolves #67677: Problems in Typo3 CMS 7.3
	* Resolves #67161: Incorrect mapping for field 'deleted'
	* Resolves #66484: Missing TCA option in manual example

2015-02-10  Oliver Klee <typo3-coding@oliverklee.de>

	* Resolves #64135: Block any write access to the static models

2015-02-10  Stanislas Rolland  <typo3@sjbr.ca>

	* Escape some backslashes in class names
	* Resolves #64945: Error when installing on 7.1
	* Enable in TYPO3 CMS 7.1

2014-12-09  Stanislas Rolland  <typo3@sjbr.ca>

	* Fix for TYPO3 CMS 7.0
	* Enable in TYPO3 CMS 7.0
	* Update version to 6.2.1

2014-12-08  Stanislas Rolland  <typo3@sjbr.ca>

	* Update version to 6.2.0

2014-11-07  Stanislas Rolland  <typo3@sjbr.ca>

	* Require TYPO3 CMS 6.2.0
	* Resolves #62770: Replace deprecated calls to ObjectManager ->create() with ->get()
	* Resolves #61296: Move TCA configuration from ext_tables.php to Configuration/TCA
	* Remove method TcaUtility::loadTCA

2014-10-16  Stanislas Rolland  <typo3@sjbr.ca>

	* Remove file Resources/Private/Language/pl.locallang_db.xlf
	* Update version to 6.1.2

2014-10-10  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #62153: Open country or territory for editing in backend leads to fatal error (Thanks to Daniel Minder)

2014-10-08  Stanislas Rolland  <typo3@sjbr.ca>

	* Update version to 6.1.1

2014-09-29  Stanislas Rolland  <typo3@sjbr.ca>

	* Add getters for abstract entity properties tableName and columnsMapping

2014-09-22  Stanislas Rolland  <typo3@sjbr.ca>
